QuestionSlider back button,Radio button change

--- a/html/sliderQuestions.html
+++ b/html/sliderQuestions.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,8 +21,9 @@
 
 <body>
     <div id="header"></div>
-    <div class="text-center">
-        <h1>Let's find few best neigborhoods for you</h1>
+    <div>
+    <!-- <div class="text-center"> -->
+        <h2>Let's find few best neigborhoods for you</h2>
         <!-- multistep form -->
         <form id="msform">
         <!-- <form id="msform" style="vertical-align: middle;display: inline-block"> -->
@@ -36,29 +36,30 @@
             </ul>
             <!-- fieldsets -->
             <fieldset class="lf-card-2">
-                <h2 class="fs-title">Which activity interests you the most?</h2>
+                <h3 class="fs-title">Which activity interests you the most?</h3>
                   <input id="q1o1" class="q1 selector" type="radio" name="activity" value="Outdoor Activities"/>
-                  <label for="q1o1">Outdoor Activities</label><br/>
+                  <label for="q1o1">Outdoor Activities</label><br>
                   <input id="q1o2" class="q1 selector" type="radio" name="activity" value="movies"/>
-                  <label for="q1o2">Watching Movies</label><br/>
+                  <label for="q1o2">Watching Movies</label><br>
                   <input id="q1o3" class="q1 selector" type="radio" name="activity" value="bar-hopping"/>
-                  <label for="q1o3">Bar Hopping</label><br/>
+                  <label for="q1o3">Bar Hopping</label><br>
                   <input id="q1o4" class="q1 selector" type="radio" name="activity" value="foodie"/>
-                  <label for="q1o4">Trying Different Cuisines</label><br/>
+                  <label for="q1o4">Trying Different Cuisines</label><br>
                   <input type="button" name="next" class="next action-button" value="Next" style="display: none;" />
             </fieldset>
             <fieldset class="lf-card-2">
-                <h2 class="fs-title">Do you have kids?</h2>
+                <h3 class="fs-title">Do you have kids?</h3>
                 <input id="q2o1" class="q2 selector" type="radio" name="kids" value="YES"/>
-                <label for="q2o1">YES</label><br/>
+                <label for="q2o1">Yes</label><br/>
                 <input id="q2o2" class="q2 selector" type="radio" name="kids" value="NO"/>
-                <label for="q2o2">NO</label><br/>
+                <label for="q2o2">No</label><br/>
                 <input id="q2o3" class="q2 selector" type="radio" name="kids" value="NA"/>
                 <label for="q2o3">N/A</label><br/>
-                <input type="button" name="previous" class="previous action-button" value="Previous" />
+                <!-- <input type="button" name="previous" class="previous action-button"/> -->
+                <i class="fa fa-chevron-circle-left previous action-button fa-lg" aria-hidden="true"></i>
             </fieldset>
             <fieldset class="lf-card-2">
-                <h2 class="fs-title">Please share your income range?</h2>
+                <h3 class="fs-title">Please share your income range?</h3>
                 <input id="q3o1" class="q3 selector" type="radio" name="income" value="10-30"/>
                 <label for="q3o1">10-30k</label><br/>
                 <input id="q3o2" class="q3 selector" type="radio" name="income" value="30-60"/>
@@ -67,21 +68,23 @@
                 <label for="q3o3">60-90k</label><br/>
                 <input id="q3o4" class="q3 selector" type="radio" name="income" value="90+"/>
                 <label for="q3o4">90+k</label><br/>
-                <input type="button" name="previous" class="previous action-button" value="Previous" />
+                <i class="fa fa-chevron-circle-left previous action-button fa-lg" aria-hidden="true"></i>
             </fieldset>
             <fieldset id='lastQue' class="lf-card-2">
-                <h2 class="fs-title">How often do you use public transportion?</h2>
+                <h3 class="fs-title">How often do you use public transportion?</h3>
                 <input id="q4o1" class="q4" type="radio" name="transportation" value="DAILY"/>
-                <label for="q4o1">VERY OFTEN</label><br/>
+                <label for="q4o1">Very Often</label><br/>
                 <input id="q4o2" class="q4" type="radio" name="transportation" value="ONCE A WEEK"/>
-                <label for="q4o2">SOMETIMES</label><br/>
+                <label for="q4o2">Sometimes</label><br/>
                 <input id="q4o3" class="q4" type="radio" name="transportation" value="FEW DAYS IN A WEEK"/>
-                <label for="q4o3">OFTEN</label><br/>
+                <label for="q4o3">Often</label><br/>
                 <input id="q4o4" class="q4" type="radio" name="transportation" value="NA"/>
                 <label for="q4o4">N/A</label><br/>
                 <!-- <input type="button" name="previous" class="previous action-button" value="Previous" /> -->
-                <input type="submit" name="submit" class="submit action-button" value="Submit" onclick="location.href='SuggestionsPage.html';" />
+                <i class="fa fa-chevron-circle-left previous action-button fa-lg" aria-hidden="true"></i>
+                <!-- <input type="submit" name="submit" class="submit action-button" value="Suggest Me" onclick="location.href='SuggestionsPage.html';" /> -->
                 <!--  <a href="/html/SuggestionsPage.html"> <button class= "submit action-button" value="submit">SUBMIT</button></a> -->
+                <button class="lf-button lf-button-brand  lf-padding-large  lf-large buttonStyling submit"  onclick="location.href='SuggestionsPage.html';">Suggest Me</button>
             </fieldset>
         </form>
     </div>
