Html and css validation done

--- a/html/sliderQuestions.html
+++ b/html/sliderQuestions.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questionaire</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Questionaire Page</title>
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
     <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
     <link rel="stylesheet" type="text/css" href="../css/layout.css" />
     <link rel="stylesheet" type="text/css" href="../css/brand.css" />
-    <!-- <link rel="stylesheet" href="../css/questionnaire.css"/> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/sliderQuestionStyle.css" />
-    <!--<link rel="stylesheet/less" type="text/css" href="less/slider.less" />-->
-    <!--<script src="js/less.js" type="text/javascript"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
-    <title>Questionnaire</title>
 </head>
-
 <body>
     <div id="header"></div>
     <div>
-    <!-- <div class="text-center"> -->
         <h2>Let's find few best neigborhoods for you</h2>
         <!-- multistep form -->
         <form id="msform">
-        <!-- <form id="msform" style="vertical-align: middle;display: inline-block"> -->
             <!-- progressbar -->
             <ul id="progressbar">
                 <li class="active">1</li>
@@ -45,7 +38,6 @@
                   <label for="q1o3">Bar Hopping</label><br>
                   <input id="q1o4" class="q1 selector" type="radio" name="activity" value="foodie"/>
                   <label for="q1o4">Trying Different Cuisines</label><br>
-                  <input type="button" name="next" class="next action-button" value="Next" style="display: none;" />
             </fieldset>
             <fieldset class="lf-card-2">
                 <h3 class="fs-title">Do you have kids?</h3>
@@ -55,7 +47,6 @@
                 <label for="q2o2">No</label><br/>
                 <input id="q2o3" class="q2 selector" type="radio" name="kids" value="NA"/>
                 <label for="q2o3">N/A</label><br/>
-                <!-- <input type="button" name="previous" class="previous action-button"/> -->
                 <i class="fa fa-chevron-circle-left previous action-button fa-lg" aria-hidden="true"></i>
             </fieldset>
             <fieldset class="lf-card-2">
@@ -80,10 +71,7 @@
                 <label for="q4o3">Often</label><br/>
                 <input id="q4o4" class="q4" type="radio" name="transportation" value="NA"/>
                 <label for="q4o4">N/A</label><br/>
-                <!-- <input type="button" name="previous" class="previous action-button" value="Previous" /> -->
                 <i class="fa fa-chevron-circle-left previous action-button fa-lg" aria-hidden="true"></i>
-                <!-- <input type="submit" name="submit" class="submit action-button" value="Suggest Me" onclick="location.href='SuggestionsPage.html';" /> -->
-                <!--  <a href="/html/SuggestionsPage.html"> <button class= "submit action-button" value="submit">SUBMIT</button></a> -->
                 <button class="lf-button lf-button-brand  lf-padding-large  lf-large buttonStyling submit"  onclick="location.href='SuggestionsPage.html';">Suggest Me</button>
             </fieldset>
         </form>
