--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Locale Finder</title>
+    <title>Locale Finder: Our Suggestions</title>
     <!--Common Style Sheets-->
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
     <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
@@ -14,131 +14,94 @@
     <!-- end -->
     <link rel="stylesheet" type="text/css" href="../css/suggestionsPage.css" />
     <link rel="stylesheet" type="text/css" href="../css/popup.css" />
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="../js/jquery.canvasjs.min.js"></script>
     <script type="text/javascript" src="../js/neighborDetail.js"></script>
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
-
-   
     <!-- Header Footer Load Script -->
     <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
     <script type="text/javascript" src="../js/popup.js"></script>
-
-
 </head>
 
 <body>
-    <!--start add by neha-->
     <div id='header'></div>
-    
     <div class="colLayout">
         <div id="suggestionMain" class="lf-margin-top-xl">
-
-            <div id="suggestionNames" class="lf-margin-top-xxl lf-bg text-center">
-            <div id = "pdf">
-                <a id = "sapdf" href=""><i class="fa fa-file-pdf-o" aria-hidden="true"></i> save as pdf</a>
-            </div>
-                <div class="lf-padding-large"><h2 class="lf-xlarge">BEST NEIGHBORHOODS FOR YOU</h2></div>
-                <div style="vertical-align: middle;display: inline-block">
-                    <ul class="text-center desktopLayout" style="list-style-type: none">
-                        <!--  <li><a class="lf-button" href="neighborDetail.html?name=Queen Anne">Queen Anne</a></li>
-                          <li><a class="lf-button" href="neighborDetail.html?name=Capitol Hill">Capitol Hill</a></li>
-                          <li><a class="lf-button" href="neighborDetail.html?name=Downtown">Downtown</a></li> -->
+            <section id="suggestionNames" class="lf-margin-top-xxl lf-bg text-center">
+                <div class="lf-padding-large lf-no-margin">
+                    <h2 class="lf-xlarge lf-no-margin">Our Suggestions For Best Neighborhoods For You</h2>
+                    <h3><a id='graphDisplay' href="#graphs" class="lf-link">Learn More...</a></h3>
+                </div>
+                <div style="vertical-align: middle;display:inline-block">
+                    <ul class="text-center colLayout" style="list-style-type: none">
                     </ul>
                 </div>
-            </div>
-
-            <div class="lf-bg text-center lf-large lf-padding-xlarge">
-                <span>We have ranked the neighborhoods in Seattle based on your likes and have recommended you the top three neighborhoods in Seattle for you.
-                    Take a look at the neigborhoods that are top rankers. You can click on their names to explore more about them or you can see the
-                    <a id='graphDisplay' href="#graphs" class="lf-link">Graphical Representation</a> to compare these
-                    neighborhoods with each other.</span>
-                <div class="text-center">
-                    <br/>
-                    <span><a href="../html/map.html" class="lf-button lf-button-brand">EXPLORE MORE</a></span>
-                    <span><a  class="lf-like lf-button lf-button-brand">I LIKE ONE </a></span>
-
-                </div>
-               <!-- <div id = "pdf">
-                <a id = "sapdf" href=""><i class="fa fa-file-pdf-o" aria-hidden="true"></i> save as pdf</a>
-                </div> -->
-            </div>
-            
-            <div id='graphs' class="lf-bg1">
-                <div class="lf-padding-large"><h2 class="lf-xlarge ">GRAPHICAL REPRESENTATION FOR TOP 3 NEIGHBORHOODS</h2></div>
-                <div class="card-container mobileLayout desktopLayout"><!--id='suggestedArea' -->
-                    <div class="graphicsWrapper lf-card-2">
-                        <div> <h2 class="lf-text-color"> Crime record(measured Yearly)</h2></div>
-                        <section id="crimeContainer" class="graphicsContainer"></section>
-                        <div id="crimeContent" class="lf-card-block"></div>
-
-                    </div>
-                    <div class="graphicsWrapper lf-card-2">
-                        <div> <h2 class="lf-text-color"> Average Income </h2></div>
-                        <section id="incomeChartContainer" class="graphicsContainer"></section>
-                        <div id="incomeContent" class="lf-card-block"></div>
-                    </div>
-                </div>
-                <div class="card-container mobileLayout desktopLayout">
-                    <div class="graphicsWrapper lf-card-2">
-                        <div> <h2 class="lf-text-color"> Average House Price </h2></div>
-                        <section id="housePriceChartContainer" class="graphicsContainer"></section>
-                        <div id="priceContent" class="lf-card-block"></div>
-                    </div>
-                    <div class = "graphicsWrapper lf-card-2"><!--id='school'-->
-                        <div> <h2 class="lf-text-color"> School Ratings </h2></div>
-                        <section id="schoolRatingChartContainer" class="graphicsContainer"></section>
-                        <div id="schoolRateContent" class="lf-card-block"></div>
-                    </div>
-                </div>
-
-                <div class="card-container mobileLayout desktopLayout">
-                    <div class="graphicsWrapper lf-card-2">
-                        <div> <h2 class="lf-text-color"> Transit Score</h2></div>
-                        <div>
-                            <section id="transportationContainer" class="graphicsContainer"></section>
-                            <div id="transportContent" class="lf-card-block"></div>
-                        </div>
-
-                    </div>
-                    <div class="graphicsWrapper lf-card-2" style="visibility: hidden">
-                    </div>
-                </div>
-                <div class="text-center">
-                    <br/>
-                    <span><a href="#suggestionNames" class="lf-button lf-button-brand lf-small-margin">TOP</a></span>
-                </div>
-            </div>
-
-
+            </section>
+            <section class="lf-bg text-center lf-large lf-padding-xlarge">
+                <span><a href="../html/map.html" class="lf-button lf-button-brand">Explore More</a></span>
+                <!-- <div class="text-center">    <span><a  class="lf-like lf-button lf-button-brand">I LIKE ONE </a></span> </div> -->
+                <!-- <div id = "pdf"> <a id = "sapdf" href=""><i class="fa fa-file-pdf-o" aria-hidden="true"></i> save as pdf</a> </div> -->
+            </section>
         </div>
-
-    </div>
-
-    <div id='popup-like' class="popup">
-        <span class="lf-like lf-text-white lf-large lf-padding-large ">
-           <b>
-              I Like:
-               <ul class="colLayout lf-small-margin lf-padding-large"></ul>
-               <!-- <form action=""> </form> -->
-
-           </b>
-        </span>
-        <div class="close ns-close"></div>
+        <div id='graphs' class="lf-bg1">
+            <div class="lf-padding-large">
+                <h2 class="lf-xlarge ">Comparison of the top 3 neighborhoods</h2>
+            </div>
+            <div class="card-container mobileLayout desktopLayout">
+                <!--id='suggestedArea' -->
+                <div class="graphicsWrapper lf-card-2">
+                    <div>
+                        <h2 class="lf-text-color"> Crime record(measured Yearly)</h2></div>
+                    <section id="crimeContainer" class="graphicsContainer"></section>
+                    <div id="crimeContent" class="lf-card-block"></div>
+                </div>
+                <div class="graphicsWrapper lf-card-2">
+                    <div>
+                        <h2 class="lf-text-color"> Average Income </h2></div>
+                    <section id="incomeChartContainer" class="graphicsContainer"></section>
+                    <div id="incomeContent" class="lf-card-block"></div>
+                </div>
+            </div>
+            <div class="card-container mobileLayout desktopLayout">
+                <div class="graphicsWrapper lf-card-2">
+                    <div>
+                        <h2 class="lf-text-color"> Average House Price </h2></div>
+                    <section id="housePriceChartContainer" class="graphicsContainer"></section>
+                    <div id="priceContent" class="lf-card-block"></div>
+                </div>
+                <div class="graphicsWrapper lf-card-2">
+                    <!--id='school'-->
+                    <div>
+                        <h2 class="lf-text-color"> School Ratings </h2></div>
+                    <section id="schoolRatingChartContainer" class="graphicsContainer"></section>
+                    <div id="schoolRateContent" class="lf-card-block"></div>
+                </div>
+            </div>
+            <div class="card-container mobileLayout desktopLayout">
+                <div class="graphicsWrapper lf-card-2">
+                    <div>
+                        <h2 class="lf-text-color"> Transit Score</h2></div>
+                    <div>
+                        <section id="transportationContainer" class="graphicsContainer"></section>
+                        <div id="transportContent" class="lf-card-block"></div>
+                    </div>
+                </div>
+                <div class="graphicsWrapper lf-card-2" style="visibility: hidden">
+                </div>
+            </div>
+            <div class="text-center">
+                <br/>
+                <span><a href="#suggestionNames" class="lf-button lf-button-brand lf-small-margin">TOP</a></span>
+            </div>
+        </div>
     </div>
 
     <div id='footer'></div>
-    <!--end add by neha-->
-    <!-- Start add by sirisha -->    
     <script type="text/javascript" src="../js/suggestRefer.js"></script>
     <script type="text/javascript" src="../js/criterion.js"></script>
     <script type="text/javascript" src="../js/suggestions.js"></script>
     <script type="text/javascript" src="../js/pdfSuggestionPage.js"></script>
-
-    <!-- end by sirisha -->
 </body>
-
 </html>
