--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     <header id='header'></header>
     <main id="indexMain" class='bg-main display-main'>
         <div class="icon" id="left"><i class="fa fa-angle-left"></i></div>
-        <h2 id="sliderHeader">Find Your Dream Neighborhood</h2>
-        <h3 id="sliderPara">We care what matters to you</h3>
-        <p id="moreBtn"><a href="#indexSub" class="buttonHover"><span>LEARN MORE</span></a></p>
+        <div id="backgroundMask">
+            <h2 id="sliderHeader">Find Your Dream Neighborhood</h2>
+            <h3 id="sliderPara">We care what matters to you</h3>
+            <p id="moreBtn"><a href="#indexSub" class="buttonHover"><span>LEARN MORE</span></a></p>
+        </div>
         <div class="icon" id="right"><i class="fa fa-angle-right"></i></div>
     </main>
     <article id="indexSub" class="lf-bg">       
