--- a/html/neighborDetail.html
+++ b/html/neighborDetail.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Find Your Dream Neighborhood">
     <meta name="keywords" content="local,neighborhood,seattle">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Neighbourhood Detail</title>
+    <title>Locale Finder: Neighbourhood Detail</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
     <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
