--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -63,7 +63,7 @@
       <h2>How do we Compare ?</h2>
       <p> We compare the two neighborhoods which you choose above across the Seattle.
       <p> We show the score with respect to different criteria for each neighborhood.
-        We take into account the 5 most important metrics for each neighorhood which includes: crime stats, Transit score, cost of living, education and housing.
+        We take into account the 5 most important metrics for each neigborhood which includes: crime stats, Transit score, cost of living, education and housing.
         Further information can be explored by clicking the "Compare".
   </div>
   <div id='footer'></div>
