--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>compareNeighborhood Page</title>
+    <meta name = “description” content=“[key phrases]”>
+    <meta name=“robots” content=“index, nofollow”>
+    <title>CompareNeighborhood Page</title>
       <link rel="stylesheet" type="text/css" href="../css/reset.css" />
       <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
       <link rel="stylesheet" type="text/css" href="../css/layout.css" />
@@ -23,48 +25,52 @@
      <h2>Let's Compare the neighborhoods</h2>
   </div>
   <div class="compareContainer">
-    <section>
-      <img id="leftImg" src="../image/fremont.jpg" alt="NeighborhoodImage1">
+    <section >
+      <img  itemprop="photo" itemscope itemtype = "http://schema.org/photo" id="leftImg" src="../image/fremont.jpg" alt="NeighborhoodImage1">
       <input id="leftInput" type="text" list="neighborhoods1" name="neighbor_names" placeholder="Enter a neighborhood" required>
-          <datalist id="neighborhoods1">
-              <option value="University District">
-              <option value="Queen Anne">
-              <option value="South Lake Union">
-              <option value="Ballard">
-              <option value="Fremont">
-              <option value="Downtown">
-              <option value="Capitol Hill">
-              <option value="Northgate">
-              <option value="Alki">
+      <p id ="errorMessage1"></p>
+          <datalist itemscope itemtype = "http://schema.org/Place" id="neighborhoods1">
+              <option itemprop="name" value="University District">
+              <option itemprop="name" value="Queen Anne">
+              <option itemprop="name" value="South Lake Union">
+              <option itemprop="name" value="Ballard">
+              <option itemprop="name" value="Fremont">
+              <option itemprop="name" value="Downtown">
+              <option itemprop="name" value="Capitol Hill">
+              <option itemprop="name" value="Northgate">
+              <option itemprop="name" value="Alki">
           </datalist>
     </section>
     <section>
-      <img id='rightImg' src="../image/ud.jpg" alt="NeighborhoddImage2">
+      <img  itemprop="photo" itemscope itemtype = "http://schema.org/photo" id='rightImg' src="../image/ud.jpg" alt="NeighborhoddImage2">
       <input id="rightInput" type="text" list="neighborhoods2" name="neighbor_names2" placeholder="Enter a neighborhood" required>
-         <datalist id="neighborhoods2">
-              <option value="University District">
-              <option value="Queen Anne">
-              <option value="South Lake Union">
-              <option value="Ballard">
-              <option value="Fremont">
-              <option value="Downtown">
-              <option value="Capitol Hill">
-              <option value="Northgate">
-              <option value="Alki">
+      <p id ="errorMessage2"></p>
+         <datalist itemscope itemtype = "http://schema.org/Place" id="neighborhoods2">
+              <option itemprop="name" value="University District">
+              <option itemprop="name" value="Queen Anne">
+              <option itemprop="name" value="South Lake Union">
+              <option itemprop="name" value="Ballard">
+              <option itemprop="name" value="Fremont">
+              <option itemprop="name" value="Downtown">
+              <option itemprop="name" value="Capitol Hill">
+              <option itemprop="name" value="Northgate">
+              <option itemprop="name" value="Alki">
           </datalist>
 
     </section>
   </div>
   <div class="compareButton">
-    <button type = "submit" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling" onclick="setValues()">Compare</button>
+    <button type = "submit" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling">Compare</button>
     <!-- <button class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling"  onclick="goBack()">Back</button> -->
   </div>
-  <div class="compareDetails">
-      <h2>How do we Compare ?</h2>
+  <div class="compareDetails"><span itemscope itemtype="https://schema.org/Question">
+      <h2 itemprop="name">How do we Compare ?</h2></span>
+      <span itemprop="suggestedAnswer acceptedAnswer" itemscope itemtype="https://schema.org/Answer">
       <p> We compare the two neighborhoods which you choose above across the Seattle.
       <p> We show the score with respect to different criteria for each neighborhood.
-        We take into account the 5 most important metrics for each neigborhood which includes: crime stats, Transit score, cost of living, education and housing.
-        Further information can be explored by clicking the "Compare".
+      <span itemprop="text">We take into account the 5 most important metrics for each neighborhood which includes: crime stats, Transit score, cost of living, education, and housing.
+        Further information can be explored by clicking the "Compare".</span>
+      </span>
   </div>
   <div id='footer'></div>
   <script src="../js/setter.js" type="text/javascript"></script>
