--- a/html/team.html
+++ b/html/team.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name = “description” content=“[key phrases]”>
+    <meta name=“robots” content=“index, nofollow”>
     <title>Our TEAM</title>
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
     <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
@@ -17,47 +19,47 @@
   <body>
   <div id='header'></div>
     <h2>The team Behind the Scenes</h2>
-    <div class="intoductionImages">
+    <div class="intoductionImages" itemscope itemtype="http://schema.org/Person">
         <figure class="snip0016">
-        <img src="../image/siri.jpeg" alt="sirisha"/>
+        <img itemprop="image" src="../image/siri.jpeg" alt="Sirisha"/>
           <figcaption>
-             <h2>Sirisha</h2>
-             <p>Web Designer</p>
+             <h2 itemprop="name">Sirisha</h2>
+             <p itemprop="jobTitle">Web Designer</p>
           </figcaption>
         </figure>
         <figure class="snip0016">
-        <img src="../image/amanda.jpg" alt="amanda"/>
+        <img itemprop="image" src="../image/amanda.jpg" alt="Amanda"/>
            <figcaption>
-             <h2>Ching-Chi</h2>
-             <p>Web Designer</p>
+             <h2 itemprop="name">Ching-Chi</h2>
+             <p itemprop="jobTitle">Web Designer</p>
            </figcaption>
        </figure>
       <figure class="snip0016">
-      <img src="../image/siri.jpeg" alt="Neha"/>
+      <img itemprop="image" src="../image/siri.jpeg" alt="Neha"/>
            <figcaption>
-             <h2>Neha</h2>
-             <p>Web Designer</p>
+             <h2 itemprop="name">Neha</h2>
+             <p itemprop="jobTitle">Web Designer</p>
            </figcaption>
       </figure>
       <figure class="snip0016">
-      <img src="../image/siri.jpeg" alt="Rashmita"/>
+      <img itemprop="image" src="../image/siri.jpeg" alt="Rashmita"/>
             <figcaption>
-              <h2>Rashmita</h2>
-              <p>Web Designer</p>
+              <h2 itemprop="name">Rashmita</h2>
+              <p itemprop="jobTitle">Web Designer</p>
             </figcaption>
      </figure>
      <figure class="snip0016">
-      <img src="../image/siri.jpeg" alt="Rachel"/>
+      <img itemprop="image" src="../image/siri.jpeg" alt="Rachel"/>
             <figcaption>
-              <h2>Rachel</h2>
-              <p>Web Designer</p>
+              <h2 itemprop="name">Rachel</h2>
+              <p itemprop="jobTitle">Web Designer</p>
             </figcaption>
      </figure>
      <figure class="snip0016">
-        <img src="../image/siri.jpeg" alt="Vidhi"/>
+        <img itemprop="image" src="../image/siri.jpeg" alt="Vidhi"/>
             <figcaption>
-              <h2>Vidhi</h2>
-              <p>Our Professor</p>
+              <h2 itemprop="name">Vidhi</h2>
+              <p itemprop="jobTitle">Professor</p>
             </figcaption>
      </figure>
   </div>
