--- a/html/map.html
+++ b/html/map.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <html>
 
 <head>
-    <title>Find Neighborhood</title>
+    <title>Locale Finder: Find Neighborhood</title>
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
     <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
     <link rel="stylesheet" type="text/css" href="../css/layout.css" />
