--- a/html/map.html
+++ b/html/map.html
@@ -4,6 +4,10 @@
 <html>
 
 <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Find Your Dream Neighborhood">
+    <meta name="keywords" content="local,neighborhood,seattle">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Locale Finder: Find Neighborhood</title>
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
     <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
