--- a/html/map.html
+++ b/html/map.html
@@ -24,19 +24,19 @@
     <div id='header'></div>
 
     <div class="desktopLayout  lf-bg">
-        <div id="googleMap"></div>
+        <div itemprop="map" itemscope itemtype="http://schema.org/map" id="googleMap"></div>
         <div class="text-center" style="margin:15% 5% 0 5%">
             <h2 style="font-size:140%">Let's choose a neighborhood and view the details</h2>
-            <h3><a href="neighborDetail.html?name=Northgate">Northgate</a></h3>
-            <h3><a href="neighborDetail.html?name=Ballard">Ballard</a></h3>
-            <h3><a href="neighborDetail.html?name=Fremont">Fremont</a></h3>
-            <h3><a href="neighborDetail.html?name=University District">U-District</a></h3>
-            <h3><a href="neighborDetail.html?name=Queen Anne">Queen Anne</a></h3>
-            <h3><a href="neighborDetail.html?name=Capitol Hill">Capitol Hill</a></h3>
-            <h3><a href="neighborDetail.html?name=Downtown">Downtown</a></h3>
-            <h3><a href="neighborDetail.html?name=Alki">Alki</a></h3>
-            <h3><a href="neighborDetail.html?name=Green Lake">Green Lake</a></h3>
-            <h3><a href="neighborDetail.html?name=South Lake Union">South Lake Union</a></h3>
+            <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Northgate">Northgate</a></h3>
+            <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Ballard">Ballard</a></h3>
+            <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Fremont">Fremont</a></h3>
+            <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=University District">U-District</a></h3>
+            <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Queen Anne">Queen Anne</a></h3>
+            <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Capitol Hill">Capitol Hill</a></h3>
+            <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Downtown">Downtown</a></h3>
+            <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Alki">Alki</a></h3>
+            <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Green Lake">Green Lake</a></h3>
+            <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=South Lake Union">South Lake Union</a></h3>
         </div>
     </div>
 
