--- a/html/finalPage.html
+++ b/html/finalPage.html
@@ -20,21 +20,18 @@
 
 <body>
 	<div id='header'></div>
-	<h2 id = "awesome">Awesome!</h2>
-	<h3>Congratulations on choosing </h3>
-	<h2 id = "neighborhoodName"></h2>
-	<h3> as your dream neighborhood!</h3>
-	<h2 id = "recommend">We recommend you the following websites to find a home in your dream neighborhood </h2>
+	<div id = "thankyou">
+		<p>Thank you for choosing Locale Finder!&nbsp;<i class="fa fa-smile-o" aria-hidden="true" style="font-size:25px"></i></p>
+	</div>
+	<p>In the neighborhood<h2 id = "neighborhoodName"></h2> </p>
+	<h3 id = "recommend"> we recommend you the following websites to find a home:</h3>
 	<p><a class="link" href="https://www.zillow.com/"> Zillow </a></p>
 	<p><a class="link" href="https://www.padmapper.com/"> PadMapper</a></p>
-	<p><a class="link" href="http://www.findwell.com/"> findwell</a></p>
-	<div id = "thankyou">
-		<p>Thank you for choosing Locale Finder</p>
-		<p> We are very happy to help you choose your desired neighborhood.</p>
+	<p><a class="link" href="https://www.redfin.com/"> redfin</a></p>
+	<div id = "team">
 		<p>Here is our <a href="team.html">team</a> who helped you throughout this process</p>
 	</div>
-	<!-- <div id='footer'></div> -->
+	<div id='footer'></div>
 	<script src="../js/finalPage.js" type="text/javascript"></script>
 </body>
-
 </html>
