--- a/html/header.html
+++ b/html/header.html
@@ -1,9 +1,9 @@
-<header class="sticky-top">
+<header class="sticky-top" itemscope itemtype=" http://schema.org/Organization">
     <nav id="nav" class="rowLayout lf-card"  style="justify-content: space-between">
         <div class="rowLayout" style="align-items: center">
-            <div><a href="/index.html" class="text-xxxlarge lf-button">LF</a></div>
+            <div><a href="/index.html" class="text-xxxlarge lf-button" itemprop="logo">LF</a></div>
             <div>
-                <h1 class="wide">LOCALE FINDER</h1>
+                <h1 class="wide"  itemprop="name">LOCALE FINDER</h1>
             </div>
         </div>
 
@@ -14,29 +14,29 @@
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
-            <div id="down-content" class="lf-sidebar lf-animate-right lf-black position-topright text-left">
+            <div id="down-content" class="lf-sidebar lf-animate-right lf-black position-topright text-left" role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement">
                 <a href="javascript:void(0)" onclick="lfClose()" class="lf-button text-large lf-large lf-margin-top-large">Close &times;</a>
-                <a href="/html/sliderQuestions.html" class="text-left">SUGGEST</a>
-                <a href="/html/map.html" class="text-left">FIND</a>
-                <a href="/html/CompareNeighborhoods.html" class="text-left">COMPARE</a>
-                <a href="/html/team.html" class="text-left"> TEAM </a>
+                <a href="/html/sliderQuestions.html" class="text-left" itemprop="name">SUGGEST</a>
+                <a href="/html/map.html" class="text-left" itemprop="name">FIND</a>
+                <a href="/html/CompareNeighborhoods.html" class="text-left" itemprop="name">COMPARE</a>
+                <a href="/html/team.html" class="text-left" itemprop="name"> TEAM </a> 
             </div>
         </div>
 
-        <div id="down-content-desktop" class="rowLayout ">
+        <div id="down-content-desktop" class="rowLayout " role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement">
 
-            <a href="/html/sliderQuestions.html" class="lf-button header-link  lf-margin-top-xl" >
+            <a href="/html/sliderQuestions.html" class="lf-button header-link  lf-margin-top-xl" itemprop="name" >
                 <i class="fa fa-lightbulb-o lf-hover-opacity "></i>SUGGEST
             </a>
-            <a href="/html/map.html" class="lf-button header-link  lf-margin-top-xl">
+            <a href="/html/map.html" class="lf-button header-link  lf-margin-top-xl" itemprop="name">
                 <i class="fa fa-search lf-hover-opacity "></i>FIND
             </a>
-            <a href="/html/CompareNeighborhoods.html" class="lf-button header-link  lf-margin-top-xl">
+            <a href="/html/CompareNeighborhoods.html" class="lf-button header-link  lf-margin-top-xl" itemprop="name">
                 <i class="fa fa-balance-scale lf-hover-opacity "></i>COMPARE
             </a>
-            <a href="/html/team.html" class="lf-button header-link  lf-margin-top-xl" >
+           <a href="/html/team.html" class="lf-button header-link  lf-margin-top-xl" itemprop="name">
                 <i class="fa fa-handshake-o lf-hover-opacity "></i>TEAM
-            </a>
+            </a> 
 
         </div>
     </nav>
