--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     
 </head>
 
-<body>
-    <header id='header'></header>
+<body itemscope itemtype="http://schema.org/WebPage">
+    <header id='header' itemtype="http://schema.org/WPHeader"></header>
     <main id="indexMain" class='bg-main display-main'>
         <div class="icon" id="left"><i class="fa fa-angle-left"></i></div>
         <div id="backgroundMask">
-            <h2 id="sliderHeader">Find Your Dream Neighborhood</h2>
-            <h3 id="sliderPara">We care what matters to you</h3>
+            <h2 id="sliderHeader" itemprop="description">Find Your Dream Neighborhood</h2>
+            <h3 id="sliderPara" itemprop="description">We care what matters to you</h3>
             <p id="moreBtn"><a href="#indexSub" class="buttonHover"><span>LEARN MORE</span></a></p>
         </div>
         <div class="icon" id="right"><i class="fa fa-angle-right"></i></div>
