--- a/html/team.html
+++ b/html/team.html
@@ -5,58 +5,63 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name = “description” content=“[key phrases]”>
     <meta name=“robots” content=“index, nofollow”>
-    <title>Our TEAM</title>
+    <title>Locale Finder: Team</title>
+     <!--Common Style Sheets-->
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
     <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
     <link rel="stylesheet" type="text/css" href="../css/layout.css" />
     <link rel="stylesheet" type="text/css" href="../css/brand.css" />
+    <!--end-->
+    <link rel="stylesheet" type="text/css" href="../css/team.css" />
+
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/team.css" />
+   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+     <!-- Header Footer Load Script -->
     <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
   </head>
   <body>
   <div id='header'></div>
-    <h2>The team Behind the Scenes</h2>
-    <div class="intoductionImages" itemscope itemtype="http://schema.org/Person">
+    <h2>The team behind the scenes</h2>
+    <div class="rowLayout intoductionImages" style="flex-wrap: wrap;" itemscope itemtype="http://schema.org/Person">
         <figure class="snip0016">
-        <img itemprop="image" src="../image/siri.jpeg" alt="Sirisha"/>
+        <img itemprop="image" src="../image/team/siri.jpeg" alt="Sirisha"/>
           <figcaption>
              <h2 itemprop="name">Sirisha</h2>
              <p itemprop="jobTitle">Web Designer</p>
           </figcaption>
         </figure>
         <figure class="snip0016">
-        <img itemprop="image" src="../image/amanda.jpg" alt="Amanda"/>
+        <img itemprop="image" src="../image/team/amanda.jpg" alt="Amanda"/>
            <figcaption>
              <h2 itemprop="name">Ching-Chi</h2>
              <p itemprop="jobTitle">Web Designer</p>
            </figcaption>
        </figure>
       <figure class="snip0016">
-      <img itemprop="image" src="../image/siri.jpeg" alt="Neha"/>
+      <img itemprop="image" src="../image/team/neha.jpg" alt="Neha"/>
            <figcaption>
              <h2 itemprop="name">Neha</h2>
              <p itemprop="jobTitle">Web Designer</p>
            </figcaption>
       </figure>
       <figure class="snip0016">
-      <img itemprop="image" src="../image/siri.jpeg" alt="Rashmita"/>
+      <img itemprop="image" src="../image/team/rashmitha.jpg" alt="Rashmita"/>
             <figcaption>
-              <h2 itemprop="name">Rashmita</h2>
+              <h2 itemprop="name">Rashmitha</h2>
               <p itemprop="jobTitle">Web Designer</p>
             </figcaption>
      </figure>
      <figure class="snip0016">
-      <img itemprop="image" src="../image/siri.jpeg" alt="Rachel"/>
+      <img itemprop="image" src="../image/team/rachel.jpg" alt="Rachel"/>
             <figcaption>
               <h2 itemprop="name">Rachel</h2>
               <p itemprop="jobTitle">Web Designer</p>
             </figcaption>
      </figure>
      <figure class="snip0016">
-        <img itemprop="image" src="../image/siri.jpeg" alt="Vidhi"/>
+        <img itemprop="image" src="../image/main1.jpg" alt="Vidhi"/>
             <figcaption>
               <h2 itemprop="name">Vidhi</h2>
               <p itemprop="jobTitle">Professor</p>
