--- a/html/neighborDetail.html
+++ b/html/neighborDetail.html
@@ -7,18 +7,19 @@
     <meta name="keywords" content="local,neighborhood,seattle">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Locale Finder: Neighbourhood Detail</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!--Common Style Sheets-->
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
     <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
     <link rel="stylesheet" type="text/css" href="../css/layout.css" />
     <link rel="stylesheet" type="text/css" href="../css/brand.css" />
+    <!--end-->
     <link rel="stylesheet" type="text/css" href="../css/neighborDetail.css" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
+    
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">    
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="../js/less.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!--Scripts -->
     <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
     <script type="text/javascript" src="../js/suggestRefer.js"></script>
     <script type="text/javascript" src="../js/criterion.js"></script>
