--- a/html/map.html
+++ b/html/map.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta name="description" content="Find Your Dream Neighborhood">
     <meta name="keywords" content="local,neighborhood,seattle">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Locale Finder: Find Neighborhood</title>
+    <!--Common Style Sheets-->
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
     <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
     <link rel="stylesheet" type="text/css" href="../css/layout.css" />
     <link rel="stylesheet" type="text/css" href="../css/brand.css" />
+    <!--end-->
     <link rel="stylesheet" type="text/css" href="../css/map.css"> 
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -41,7 +42,7 @@
     </div>
 
     <div id='footer'></div>
-
+    <!--Scripts -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDD6p3hRqf_9fLtJ9GdOSt42ZZelflC3IA&callback=myMap"></script>
     <script type="text/javascript" src="../js/map.js"></script>
 </body>
