--- a/html/header.html
+++ b/html/header.html
@@ -1,4 +1,4 @@
-<header class="sticky-top" itemscope itemtype=" http://schema.org/Organization">
+<header class="sticky-top" role="banner" itemscope itemtype=" http://schema.org/Organization">
     <nav id="nav" class="rowLayout lf-card"  style="justify-content: space-between">
         <div class="rowLayout" style="align-items: center">
             <div><a href="/index.html" class="text-xxxlarge lf-button" itemprop="logo">LF</a></div>
