added aria roles

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,4 @@
-<!--start add by neha-->
-<footer class="lf-card">
+<footer class="lf-card" role="contentinfo">
     <div class="rowLayout" style="justify-content: space-between">
         <div>&copy; Copyright 2017</div>
         <div class="lf-text-grey" style="padding:0px 0px;">
@@ -10,4 +9,3 @@
         </div>
     </div>
 </footer>
-<!--end add by neha-->
