--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -13,29 +13,31 @@
     <link rel="stylesheet" type="text/css" href="../css/brand.css" />
     <!-- end -->
     <link rel="stylesheet" type="text/css" href="../css/suggestionsPage.css" />
-    <link rel="stylesheet" type="text/css" href="../css/popup.css" />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../js/jquery.canvasjs.min.js"></script>
-    <script type="text/javascript" src="../js/neighborDetail.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="../js/jquery.canvasjs.min.js"></script>      
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+
     <!-- Header Footer Load Script -->
     <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
-    <script type="text/javascript" src="../js/popup.js"></script>
+    
+    <!--Other Scripts -->
+    <script type="text/javascript" src="../js/neighborDetail.js"></script>     
 </head>
 
 <body>
     <div id='header'></div>
-    <div class="colLayout">
+    <div class="colLayout"  role="main">
         <div id="suggestionMain" class="lf-margin-top-xl">
-            <section id="suggestionNames" class="lf-margin-top-xxl lf-bg text-center">
+            <section id="suggestionNames" class="lf-margin-top-xxl lf-bg text-center" >
                 <div class="lf-padding-large lf-no-margin">
                     <h2 class="lf-xlarge lf-no-margin">Our Suggestions For Best Neighborhoods For You</h2>
                     <h3><a id='graphDisplay' href="#graphs" class="lf-link">Learn More...</a></h3>
                 </div>
-                <div style="vertical-align: middle;display:inline-block">
-                    <ul class="text-center colLayout" style="list-style-type: none">
+                <div style="vertical-align: middle;display:inline-block" itemscope itemtype="http://schema.org/Place">
+                    <ul class="text-center colLayout" style="list-style-type: none" role="menubar" itemprop="name">
                     </ul>
                 </div>
             </section>
@@ -99,9 +101,11 @@
     </div>
 
     <div id='footer'></div>
+
+    <!--Scripts -->
     <script type="text/javascript" src="../js/suggestRefer.js"></script>
     <script type="text/javascript" src="../js/criterion.js"></script>
     <script type="text/javascript" src="../js/suggestions.js"></script>
-    <script type="text/javascript" src="../js/pdfSuggestionPage.js"></script>
+    <!--<script type="text/javascript" src="../js/pdfSuggestionPage.js"></script> -->
 </body>
 </html>
