--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -4,20 +4,27 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name = “description” content=“[key phrases]”>
-    <meta name=“robots” content=“index, nofollow”>
+    <meta name = "description" content="Compare Neighborhood">
+    <meta name="keywords" content="compare,neighborhood,university district,fremont,south lake union,ballard">
+    <meta name="robots" content="index, nofollow">
     <title>CompareNeighborhood Page</title>
-      <link rel="stylesheet" type="text/css" href="../css/reset.css" />
-      <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
-      <link rel="stylesheet" type="text/css" href="../css/layout.css" />
-      <link rel="stylesheet" type="text/css" href="../css/brand.css" />
-      <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" type="text/css" href="../css/compare.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-      <script type="text/javascript" src="../js/compareNeighborhood.js"></script>
-      <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
-      <script type="text/javascript" src="../js/criterion.js"></script>
+  <!--Common Style Sheets-->
+    <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
+    <link rel="stylesheet" type="text/css" href="../css/layout.css" />
+    <link rel="stylesheet" type="text/css" href="../css/brand.css" />
+  <!-- end -->
+    <link rel="stylesheet" type="text/css" href="../css/compare.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+  <!-- Header Footer Load Script -->
+    <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
+  <!-- javascrip files -->
+    <script type="text/javascript" src="../js/compareNeighborhood.js"></script>
+    <script type="text/javascript" src="../js/criterion.js"></script>
 </head>
 <body>
   <div id='header'></div>
