--- a/html/sliderQuestions.html
+++ b/html/sliderQuestions.html
@@ -3,20 +3,25 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Locale Finder: Questionaire Page</title>
-    <!--Common Style Sheets-->
-    <link rel="stylesheet" type="text/css" href="../css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
-    <link rel="stylesheet" type="text/css" href="../css/layout.css" />
-    <link rel="stylesheet" type="text/css" href="../css/brand.css" />
-    <!--end-->
-    <link rel="stylesheet" type="text/css" href="../css/sliderQuestionStyle.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">  
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <meta name="description" content="Questions">
+  <meta name="keywords" content="transportation,kids,activities,income range">
+  <meta name="robots" content="index, nofollow">
+  <title>Questionaire Page</title>
+   <!--Common Style Sheets-->
+  <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
+  <link rel="stylesheet" type="text/css" href="../css/layout.css" />
+  <link rel="stylesheet" type="text/css" href="../css/brand.css" />
+   <!-- end -->
 
-    <!-- Header Footer Load Script -->
-    <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/sliderQuestionStyle.css" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+   <!-- Header Footer Load Script -->
+  <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
 </head>
 <body>
     <div id="header"></div>
@@ -80,9 +85,8 @@
             </fieldset>
         </form>
     </div>
-    <!-- jQuery -->
-    <!-- <div id="footer"></div> -->
-    <script type="text/javascript" src="../js/sliderQuestion.js"></script>
+ <!-- footer section -->
+ <div id='footer'></div>
+ <script type="text/javascript" src="../js/sliderQuestion.js"></script>
 </body>
-
 </html>
