--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name=“ description” content=“[key phrases]”>
-    <meta name=“robots” content=“index, nofollow”>
+    <meta name="description" content="compare Neighborhood">
+    <meta name="keywords" content="compare, neighborhood, seattle, ballard, south lake union, fremont, university District, downtown, capitol hill, northgate, quene anne, alki">
+    <meta name="robots" content="index, nofollow">
     <title>Locale Finder: Compare Neighborhoods Select</title>
 
     <!--Common Style Sheets-->
@@ -19,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    
+
     <!--Scripts -->
     <script type="text/javascript" src="../js/compareNeighborhood.js"></script>
     <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
