--- a/html/team.html
+++ b/html/team.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name = “description” content=“[key phrases]”>
-    <meta name=“robots” content=“index, nofollow”>
+    <meta name="description" content="About Team">
+    <meta name="keywords" content="Sirisha, Amanda, Rachel, Neha, Rashmita, Vidhi">
+    <meta name="robots" content="index, nofollow">
     <title>Locale Finder: Team</title>
      <!--Common Style Sheets-->
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
@@ -16,7 +17,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
      <!-- Header Footer Load Script -->
     <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
