--- a/html/sliderQuestions.html
+++ b/html/sliderQuestions.html
@@ -26,7 +26,7 @@
 <body>
     <div id="header"></div>
     <div>
-        <h2>Let's find few best neigborhoods for you</h2>
+        <h2 role="heading">Let's find few best neigborhoods for you</h2>
         <!-- multistep form -->
         <form id="msform">
             <!-- progressbar -->
