--- a/html/team.html
+++ b/html/team.html
@@ -24,45 +24,45 @@
   </head>
   <body>
   <div id='header'></div>
-    <h2>The team behind the scenes</h2>
-    <div class="rowLayout intoductionImages" style="flex-wrap: wrap;" itemscope itemtype="http://schema.org/Person">
+    <h2 role="heading">The team behind the scenes</h2>
+    <div class="rowLayout intoductionImages" style="flex-wrap: wrap;" itemscope itemtype="http://schema.org/Person" role="main">
         <figure class="snip0016">
-        <img itemprop="image" src="../image/team/siri.jpeg" alt="Sirisha"/>
+        <img itemprop="image" src="../image/team/siri.jpeg" alt="Sirisha" role="img" aria-label="Sirisha"/>
           <figcaption>
              <h2 itemprop="name">Sirisha</h2>
              <p itemprop="jobTitle">Web Designer</p>
           </figcaption>
         </figure>
         <figure class="snip0016">
-        <img itemprop="image" src="../image/team/amanda.jpg" alt="Amanda"/>
+        <img itemprop="image" src="../image/team/amanda.jpg" alt="Amanda" role="img" aria-label="Amanda"/>
            <figcaption>
              <h2 itemprop="name">Ching-Chi</h2>
              <p itemprop="jobTitle">Web Designer</p>
            </figcaption>
        </figure>
       <figure class="snip0016">
-      <img itemprop="image" src="../image/team/neha.jpg" alt="Neha"/>
+      <img itemprop="image" src="../image/team/neha.jpg" alt="Neha" role="img" aria-label="Neha"/>
            <figcaption>
              <h2 itemprop="name">Neha</h2>
              <p itemprop="jobTitle">Web Designer</p>
            </figcaption>
       </figure>
       <figure class="snip0016">
-      <img itemprop="image" src="../image/team/rashmitha.jpg" alt="Rashmita"/>
+      <img itemprop="image" src="../image/team/rashmitha.jpg" alt="Rashmita" role="img" aria-label="Rashmita"/>
             <figcaption>
               <h2 itemprop="name">Rashmitha</h2>
               <p itemprop="jobTitle">Web Designer</p>
             </figcaption>
      </figure>
      <figure class="snip0016">
-      <img itemprop="image" src="../image/team/rachel.jpg" alt="Rachel"/>
-            <figcaption>
+      <img itemprop="image" src="../image/team/rachel.jpg" alt="Rachel" role="img" aria-label="vidhi"/>
+            <fi
               <h2 itemprop="name">Rachel</h2>
               <p itemprop="jobTitle">Web Designer</p>
             </figcaption>
      </figure>
      <figure class="snip0016">
-        <img itemprop="image" src="../image/main1.jpg" alt="Vidhi"/>
+        <img itemprop="image" src="../image/main1.jpg" alt="Vidhi" role="img" aria-label="sirisha"/>
             <figcaption>
               <h2 itemprop="name">Vidhi</h2>
               <p itemprop="jobTitle">Professor</p>
