--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -30,14 +30,14 @@
 <body>
     <div id='header'></div>
     <div class="heading">
-        <h2>Let's Compare the neighborhoods</h2>
+        <h2 role="heading">Let's Compare the neighborhoods</h2>
     </div>
-    <div class="compareContainer">
+    <div class="compareContainer" role="main">
         <section>
-            <img itemprop="photo" itemscope itemtype="http://schema.org/photo" id="leftImg" src="../image/fremont.jpg" alt="NeighborhoodImage1">
-            <input id="leftInput" type="text" list="neighborhoods1" name="neighbor_names" placeholder="Enter a neighborhood" required>
-            <p id="errorMessage1"></p>
-            <datalist itemscope itemtype="http://schema.org/Place" id="neighborhoods1">
+            <img itemprop="photo" itemscope itemtype="http://schema.org/photo" id="leftImg" src="../image/fremont.jpg" alt="NeighborhoodImage1" required aria-required="true">
+            <input id="leftInput" type="text" list="neighborhoods1" name="neighbor_names" placeholder="Enter a neighborhood" >
+            <p id="errorMessage1" aria-hidden=true></p>
+            <datalist itemscope itemtype="http://schema.org/Place" id="neighborhoods1" 	role="listbox" aria-multiselectable="false" >
                 <option itemprop="name" value="University District">
                     <option itemprop="name" value="Queen Anne"></option>
                     <option itemprop="name" value="South Lake Union"></option>
@@ -52,8 +52,8 @@
         <section>
             <img itemprop="photo" itemscope itemtype="http://schema.org/photo" id='rightImg' src="../image/ud.jpg" alt="NeighborhoddImage2">
             <input id="rightInput" type="text" list="neighborhoods2" name="neighbor_names2" placeholder="Enter a neighborhood" required>
-            <p id="errorMessage2"></p>
-            <datalist itemscope itemtype="http://schema.org/Place" id="neighborhoods2">
+            <p id="errorMessage2" aria-hidden=true></p>
+            <datalist itemscope itemtype="http://schema.org/Place" id="neighborhoods2" 	role="listbox" aria-multiselectable="false" aria-required="true">
                 <option itemprop="name" value="University District"></option>
                 <option itemprop="name" value="Queen Anne"></option>
                 <option itemprop="name" value="South Lake Union"></option>
@@ -70,15 +70,15 @@
         <button type="submit" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling">Compare</button>
         <!-- <button class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling"  onclick="goBack()">Back</button> -->
     </div>
-    <div class="compareDetails"><span itemscope itemtype="https://schema.org/Question">
-      <h2 itemprop="name">How do we Compare ?</h2></span>
+    <div class="compareDetails" role="complementary"><span itemscope itemtype="https://schema.org/Question">
+      <h2 itemprop="name" role="heading">How do we Compare ?</h2></span>
         <span itemprop="suggestedAnswer acceptedAnswer" itemscope itemtype="https://schema.org/Answer">
       <p> We compare the two neighborhoods which you choose above across the Seattle.
       <p> We show the score with respect to different criteria for each neighborhood.
       <span itemprop="text">We take into account the 5 most important metrics for each neighborhood which includes: crime stats, Transit score, cost of living, education, and housing.Further information can be explored by clicking the "Compare".</span>
         </span>
     </div>
-    <div id='footer'></div>
+    <div id='footer' role="contentinfo"></div>
     <script src="../js/setter.js" type="text/javascript"></script>
 </body>
 </html>
