--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -33,7 +33,7 @@
         <div id="suggestionMain" class="lf-margin-top-xl">
             <section id="suggestionNames" class="lf-margin-top-xxl lf-bg text-center" >
                 <div class="lf-padding-large lf-no-margin">
-                    <h2 class="lf-xlarge lf-no-margin">Our Suggestions For Best Neighborhoods For You</h2>
+                    <h2>Our suggestions for best neighborhoods for you</h2>
                     <h3><a id='graphDisplay' href="#graphs" class="lf-link">Learn More...</a></h3>
                 </div>
                 <div style="vertical-align: middle;display:inline-block" itemscope itemtype="http://schema.org/Place">
